# aoc

./: Makefile  README.md  mypy.ini  pyproject.toml
inputs/2024/: 15.example
scripts/: generate.sh  generate_inputs.sh
src/: day_eight.py  day_eighteen.py  day_eleven.py  day_fifteen.py  day_five.py  day_fiveteen.py  day_four.py  day_fourteen.py  day_nine.py  day_nineteen.py  day_one.py  day_seven.py  day_seventeen.py  day_six.py  day_sixteen.py  day_ten.py  day_thirteen.py  day_three.py  day_twelve.py  day_twenty.py  day_twenty_five.py  day_twenty_four.py  day_twenty_one.py  day_twenty_three.py  day_twenty_two.py  day_two.py
src/computer/: computer.py
src/twenty_four/: day_eight.py  day_eighteen.py  day_four.py  day_one.py  day_seven.py  day_seventeen.py  day_six.py  day_ten.py  day_three.py  day_twenty.py  day_twenty_four.py  day_twenty_one.py  day_twenty_three.py
src/twenty_three/: day_one.py  day_three.py  day_two.py
tests/: test_day_eight.py  test_day_eighteen.py  test_day_eleven.py  test_day_fifteen.py  test_day_five.py  test_day_fiveteen.py  test_day_four.py  test_day_fourteen.py  test_day_nine.py  test_day_nineteen.py  test_day_one.py  test_day_seven.py  test_day_seventeen.py  test_day_six.py  test_day_sixteen.py  test_day_ten.py  test_day_thirteen.py  test_day_three.py  test_day_twelve.py  test_day_twenty.py  test_day_twenty_five.py  test_day_twenty_four.py  test_day_twenty_one.py  test_day_twenty_three.py  test_day_twenty_two.py  test_day_two.py
tests/twenty_four/: test_day_eight.py  test_day_eighteen.py  test_day_eleven.py  test_day_fifteen.py  (+21 more)
(+4 files in other folders)
