[tool.poetry]
name = "Advent of Code"
version = "0.0.1"
description = "Advent of Code 2024 solutions"
authors = ["Pedro Lopez Mareque <pedro.lopez.mareque@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sympy = "^1.13.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
ruff = "^0.6.8"
pytest = "^7.4.0"
pytest-xdist = "^3.3.1"
pytest-watch = "^4.2.0"
expects = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
